--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ title }} - EstudiaYa</title>
-    <link rel="stylesheet" href="{{ eleventy.pathPrefix }}/assets/css/style.css">
-    <link rel="stylesheet" href="{{ eleventy.pathPrefix }}/assets/css/responsive.css">
+    <link rel="stylesheet" href="/website/assets/css/style.css">
+    <link rel="stylesheet" href="/website/assets/css/responsive.css">
     {% if cssFile %}
-    <link rel="stylesheet" href="{{ eleventy.pathPrefix }}/assets/css/{{ cssFile }}">
+    <link rel="stylesheet" href="/website/assets/css/{{ cssFile }}">
     {% endif %}
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Poppins:wght@600;700&display=swap" rel="stylesheet">
@@ -16,16 +16,16 @@
     <!-- Header -->
     <header>
         <div class="container header-container">
-            <a href="{{ eleventy.pathPrefix }}/" class="logo">
+            <a href="/website/" class="logo">
                 <i class="fas fa-graduation-cap"></i>
                 EstudiaYa
             </a>
             <nav>
                 <ul>
-                    <li><a href="{{ eleventy.pathPrefix }}/#cursos">Cursos</a></li>
-                    <li><a href="{{ eleventy.pathPrefix }}/carreras.html">Carreras</a></li>
-                    <li><a href="{{ eleventy.pathPrefix }}/#testimonios">Testimonios</a></li>
-                    <li><a href="{{ eleventy.pathPrefix }}/blog.html">Blog</a></li>
+                    <li><a href="/website/#cursos">Cursos</a></li>
+                    <li><a href="/website/carreras.html">Carreras</a></li>
+                    <li><a href="/website/#testimonios">Testimonios</a></li>
+                    <li><a href="/website/blog.html">Blog</a></li>
                 </ul>
             </nav>
             <div class="auth-buttons">
@@ -46,28 +46,28 @@
                 <div class="footer-column">
                     <h3>Sobre nosotros</h3>
                     <ul>
-                        <li><a href="{{ eleventy.pathPrefix }}/nuestra-mision.html">Nuestra misión</a></li>
-                        <li><a href="{{ eleventy.pathPrefix }}/equipo.html">Equipo</a></li>
-                        <li><a href="{{ eleventy.pathPrefix }}/trabaja-con-nosotros.html">Trabaja con nosotros</a></li>
-                        <li><a href="{{ eleventy.pathPrefix }}/prensa.html">Prensa</a></li>
+                        <li><a href="/website/nuestra-mision.html">Nuestra misión</a></li>
+                        <li><a href="/website/equipo.html">Equipo</a></li>
+                        <li><a href="/website/trabaja-con-nosotros.html">Trabaja con nosotros</a></li>
+                        <li><a href="/website/prensa.html">Prensa</a></li>
                     </ul>
                 </div>
                 <div class="footer-column">
                     <h3>Recursos</h3>
                     <ul>
-                        <li><a href="{{ eleventy.pathPrefix }}/blog.html">Blog</a></li>
-                        <li><a href="{{ eleventy.pathPrefix }}/guias-aprendizaje.html">Guías de aprendizaje</a></li>
-                        <li><a href="{{ eleventy.pathPrefix }}/webinars.html">Webinars</a></li>
-                        <li><a href="{{ eleventy.pathPrefix }}/foro.html">Foro</a></li>
+                        <li><a href="/website/blog.html">Blog</a></li>
+                        <li><a href="/website/guias-aprendizaje.html">Guías de aprendizaje</a></li>
+                        <li><a href="/website/webinars.html">Webinars</a></li>
+                        <li><a href="/website/foro.html">Foro</a></li>
                     </ul>
                 </div>
                 <div id="soporte" class="footer-column">
                     <h3>Soporte</h3>
                     <ul>
-                        <li><a href="{{ eleventy.pathPrefix }}/centro-ayuda.html">Centro de ayuda</a></li>
-                        <li><a href="{{ eleventy.pathPrefix }}/contacto.html">Contacto</a></li>
-                        <li><a href="{{ eleventy.pathPrefix }}/terminos-condiciones.html">Términos y condiciones</a></li>
-                        <li><a href="{{ eleventy.pathPrefix }}/politica-privacidad.html">Política de privacidad</a></li>
+                        <li><a href="/website/centro-ayuda.html">Centro de ayuda</a></li>
+                        <li><a href="/website/contacto.html">Contacto</a></li>
+                        <li><a href="/website/terminos-condiciones.html">Términos y condiciones</a></li>
+                        <li><a href="/website/politica-privacidad.html">Política de privacidad</a></li>
                     </ul>
                 </div>
             </div>
